--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,3 @@
-Flask==2.3.2
-flask-cors==4.0.0
-python-dotenv==1.0.1
-pymongo==4.7.2
-functions-framework==3.4.0
 blinker==1.9.0
 click==8.2.2
 dnspython==2.7.0
@@ -11,6 +6,6 @@ flask-cors==6.0.1
 itsdangerous==2.2.0
 Jinja2==3.1.6
 MarkupSafe==3.0.2
-pymongo==4.13.2
+pymongo==4.13.2git 
 python-dotenv==1.1.1
 Werkzeug==3.1.3
