--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,6 @@ flask-cors==6.0.1
 itsdangerous==2.2.0
 Jinja2==3.1.6
 MarkupSafe==3.0.2
-pymongo==4.13.2git 
+pymongo==4.13.2
 python-dotenv==1.1.1
 Werkzeug==3.1.3
