--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,25 @@
+anyio==4.10.0
 blinker==1.9.0
 click==8.2.2
+cloudevents==1.11.0
+deprecation==2.1.0
 dnspython==2.7.0
 Flask==3.1.1
 flask-cors==6.0.1
+functions-framework==3.9.2
+gunicorn==23.0.0
+h11==0.16.0
+idna==3.10
 itsdangerous==2.2.0
 Jinja2==3.1.6
 MarkupSafe==3.0.2
+packaging==25.0
 pymongo==4.13.2
 python-dotenv==1.1.1
+sniffio==1.3.1
+starlette==0.47.2
+typing_extensions==4.14.1
+uvicorn==0.35.0
+uvicorn-worker==0.3.0
+watchdog==6.0.0
 Werkzeug==3.1.3
